--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -13,3 +13,9 @@ $font-medium: rem(20);
 /* FONT FAMILY */
 
 /* COLORS */
+
+$color-primary: #a9cc55;
+$color-secondary: #1f8e45;
+$color-light: #ffffff;
+$color-dark: #000000;
+$color-shadow: 0px 0px 57px 13px rgba(230, 255, 0, 1);
