--- a/src/components/atoms/button/_button.scss
+++ b/src/components/atoms/button/_button.scss
@@ -9,6 +9,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: bold;
+  cursor: pointer;
 
   &__color--primary {
     background: $color-primary;
