--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -19,3 +19,4 @@ $color-secondary: #1f8e45;
 $color-light: #ffffff;
 $color-dark: #000000;
 $color-shadow: 0px 0px 57px 13px rgba(230, 255, 0, 1);
+$color-shadow-secondary: 0px 0px 30px 5px rgba(230, 255, 0, 1);
