--- a/src/components/pages/Board/_board.scss
+++ b/src/components/pages/Board/_board.scss
@@ -8,3 +8,20 @@
   justify-content: center;
   align-items: center;
 }
+
+.not-results {
+  margin: 150px 20px;
+  color: $color-light;
+  font-family: sans-serif;
+  font-size: 30px;
+  text-align: center;
+  line-height: 45px;
+
+  @include tablet {
+    margin: 200px 40px;
+  }
+
+  & span {
+    display: block;
+  }
+}
