--- a/src/components/pages/Board/_board.scss
+++ b/src/components/pages/Board/_board.scss
@@ -12,8 +12,8 @@
 .not-results {
   margin: 150px 20px;
   color: $color-light;
-  font-family: sans-serif;
-  font-size: 30px;
+  font-family: $font-primary;
+  font-size: $font-medium;
   text-align: center;
   line-height: 45px;
 
