--- a/src/components/atoms/button/_button.scss
+++ b/src/components/atoms/button/_button.scss
@@ -5,16 +5,24 @@
   border: none;
   border-radius: 20px;
   text-align: center;
-  font-family: sans-serif;
+  font-family: $font-primary;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
 
   &__color--primary {
-    background: $color-primary;
+    background-color: $color-primary;
     box-shadow: $color-shadow;
     color: $color-light;
+    transition: background-color 0.5s linear;
+    animation-name: button-shine;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+
+    &:hover {
+      background-color: $color-tertiary;
+    }
   }
 
   &__size--medium {
@@ -23,7 +31,19 @@
   }
 
   &__size--large {
-    width: 300px;
+    width: 350px;
     padding: 5px;
+  }
+}
+
+@keyframes button-shine {
+  0% {
+    box-shadow: $color-shadow;
+  }
+  50% {
+    box-shadow: 0px 0px 57px -4px rgba(230, 255, 0, 1);
+  }
+  100% {
+    box-shadow: $color-shadow;
   }
 }
