--- a/src/components/molecules/CharacterCard/_characterCard.scss
+++ b/src/components/molecules/CharacterCard/_characterCard.scss
@@ -8,7 +8,9 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: white;
+  color: $color-light;
+  font-family: $font-secondary;
+
   &__avatar {
     border-radius: 100%;
     max-width: 180px;
@@ -21,6 +23,6 @@
     }
   }
   &__name {
-    font-size: 20px;
+    font-size: $font-extra-medium;
   }
 }
