--- a/src/components/molecules/CharacterDetailCard/_characterDetailCard.scss
+++ b/src/components/molecules/CharacterDetailCard/_characterDetailCard.scss
@@ -2,7 +2,7 @@
 @import "../../../stylesheets/core/_mixins.scss";
 
 .character__card {
-  color: white;
+  color: $color-light;
   display: flex;
   flex-direction: column;
   align-items: center;
