--- a/src/components/molecules/CharacterDetailCard/_characterDetailCard.scss
+++ b/src/components/molecules/CharacterDetailCard/_characterDetailCard.scss
@@ -67,6 +67,7 @@
         height: 50px;
         background: $color-secondary;
         border-radius: 100%;
+        border: 1px solid $color-light;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -76,6 +77,8 @@
         }
       }
       .legend {
+        font-family: $font-primary;
+        letter-spacing: 1px;
         text-transform: uppercase;
         margin-top: 10px;
       }
