--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -5,7 +5,8 @@ $display: 1280px;
 
 /* FONT SIZES */
 
-$font-regular: 16;
+$font-regular: 16px;
+$font-small: 14px;
 $font-extra-medium: 20px;
 $font-medium: 32px;
 $font-large: 40px;
