--- a/src/components/organisms/CharactersList/_charactersList.scss
+++ b/src/components/organisms/CharactersList/_charactersList.scss
@@ -3,10 +3,12 @@
 
 .characters__list {
   width: 100%;
+  min-height: 530px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   @include tablet {
     flex-direction: row;
     justify-content: center;
