--- a/src/components/atoms/button/_button.scss
+++ b/src/components/atoms/button/_button.scss
@@ -31,6 +31,17 @@
     box-shadow: 0px 0px 40px 3px rgba(230, 255, 0, 1);
   }
 
+  &__color--tertiary {
+    background-color: rgba(0, 0, 0, 0.4);
+    color: $color-light;
+    box-shadow: 0px 0px 50px -5px rgba(230, 255, 0, 1);
+    transition: background-color 0.5s linear;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+  }
+
   &__size--medium {
     width: 200px;
     padding: 15px 30px;
@@ -45,6 +56,12 @@
     width: 100px;
     height: 25px;
     padding: 3px;
+  }
+
+  &__size--radius {
+    width: 50px;
+    height: 50px;
+    border-radius: 30%;
   }
 }
 
