--- a/src/components/pages/CharacterDetail/_characterDetail.scss
+++ b/src/components/pages/CharacterDetail/_characterDetail.scss
@@ -10,12 +10,19 @@
   align-items: center;
 
   &--navigation {
-    display: flex;
-    justify-content: center;
     margin-bottom: 120px;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     li {
       padding: 0 20px;
+
+      &:nth-child(1) {
+        grid-column: 1/2;
+      }
+
+      &:nth-child(2) {
+        grid-column: 2/3;
+      }
     }
     & .navigation--left {
       width: 300px;
