--- a/src/components/pages/CharacterDetail/_characterDetail.scss
+++ b/src/components/pages/CharacterDetail/_characterDetail.scss
@@ -39,24 +39,32 @@
     }
 
     & .image--preview {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: none;
+      @include tablet {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-      & img {
-        width: 45px;
-        height: 45px;
-        border-radius: 100%;
-        border: 1px solid $color-light;
-        margin: 10px;
-        order: 2;
+        & img {
+          width: 45px;
+          height: 45px;
+          border-radius: 100%;
+          border: 1px solid $color-light;
+          margin: 10px;
+          order: 2;
+        }
       }
     }
 
     & .text--preview {
-      color: $color-light;
-      font-size: $font-small;
-      order: 3;
+      display: none;
+
+      @include tablet {
+        display: block;
+        color: $color-light;
+        font-size: $font-small;
+        order: 3;
+      }
     }
     & .order-01 {
       order: 1;
